# hydrocube

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  cube.example.yaml  cube.test.yaml  docker-compose.yaml
.github/workflows/: ci.yml
docs/: code_review_issues.md
docs/superpowers/plans/: 2026-04-13-hydrocube-v1.md  2026-04-21-multi-cube-peer-discovery.md
docs/superpowers/specs/: 2026-04-13-hydrocube-design.md  2026-04-21-ingest-layer-design.md  2026-04-21-time-model-design.md  2026-04-23-drill-through-across-design.md  2026-04-23-output-layer-design.md  2026-04-25-aggregation-compaction-design.md
scripts/: create-topic.sh  run-test-env.sh  vendor.sh
src/: cli.rs  compaction.rs  config.rs  db_manager.rs  delta.rs  engine.rs  error.rs  lib.rs  main.rs  persistence.rs  publish.rs  retention.rs  shutdown.rs  startup.rs
src/aggregation/: decompose.rs  mod.rs  sql_gen.rs  window.rs
src/auth/: basic.rs  mod.rs
src/hooks/: cron.rs  mod.rs  placeholder.rs  runner.rs
src/identity/: mod.rs
src/ingest/: avro.rs  file.rs  kafka.rs  mod.rs  nats.rs  parser.rs  protobuf.rs  reference.rs
src/peers/: gossip.rs  mod.rs
src/tables/: mod.rs
src/transform/: lua.rs  lua_ctx.rs  mod.rs  sql.rs
src/web/: api.rs  assets.rs  http_ingest.rs  mod.rs  server.rs  sse.rs
static/bootstrap/: bootstrap.bundle.min.js  bootstrap.min.css
static/bootswatch/: darkly.min.css  flatly.min.css
static/codemirror/: codemirror.min.css  codemirror.min.js  sql.min.js
templates/: index.html.j2
tests/: aggregation_test.rs  avro_decoder_test.rs  compaction_test.rs  config_test.rs  cron_test.rs  db_manager_test.rs  delta_test.rs  engine_test.rs  file_source_test.rs  hook_runner_test.rs  http_ingest_test.rs  identity_test.rs  integration_test.rs  lua_ctx_test.rs  nats_test.rs  parser_test.rs  path_resolver_test.rs  peers_test.rs  persistence_test.rs  placeholder_test.rs  protobuf_decoder_test.rs  reference_test.rs  sql_gen_test.rs  tables_test.rs  transform_test.rs  web_api_test.rs
tools/: generate_trades.py
wireframe/: index.html
